--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.form-control {
+	@apply w-full px-3 py-1 mt-0 mb-5 border-solid border-b-2 border-black focus:outline-none focus:ring-2 focus:border-none focus:ring-black placeholder:text-slate-400 placeholder:text-sm text-secondary text-base;
+}
+
+.btn {
+	@apply font-semibold text-lg  py-1 px-6 rounded-sm hover:opacity-80;
+}
+
+.link {
+    @apply underline italic hover:text-info;
+}
+
+.menu > li > a.active {
+    @apply underline text-black;
+}
